--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Perl extension Amon2::Plugin::Web::MobileAgent
 
+0.05
+
+    - use MB
+    - fixed testing issue
+
+0.04
+
+    - change distribution name
+    - fixed testing issue
+
 0.03
 
     - better supported phones detection
