Import of TOKUHIROM/Amon2-Plugin-Web-MobileAgent-0.07 from CPAN.
gitpan-cpan-distribution: Amon2-Plugin-Web-MobileAgent
gitpan-cpan-version:      0.07
gitpan-cpan-path:         TOKUHIROM/Amon2-Plugin-Web-MobileAgent-0.07.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Amon2::Plugin::Web::MobileAgent
 
+0.07
+
+    - depend to Encode::JP::Mobile 0.29
+
 0.06
 
     - fixed testing issue
