Import of TOKUHIROM/Amon2-Plugin-Web-MobileAgent-0.09 from CPAN.
gitpan-cpan-distribution: Amon2-Plugin-Web-MobileAgent
gitpan-cpan-version:      0.09
gitpan-cpan-path:         TOKUHIROM/Amon2-Plugin-Web-MobileAgent-0.09.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Amon2::Plugin::Web::MobileAgent
 
+0.09
+
+    - fixed setup flavor.
+      It was broken by Amon2 core's update.
+
 0.08
 
     - no feature changes.
